# preframr-tokens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ptlog  AGENTS.md  AGENT_TASK_generator_pipeline.md  AGENT_TASK_melody_skeleton.md  API_SURFACE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONSTRAINED_DECODE_REGISTRY_DESIGN.md  Dockerfile  MDL_PARSER_IMPLEMENTATION.md  MDL_TRANSITION_DESIGN.md  NEXT_BUILD_additive_instrument_model.md  PARSE_PERF_REVIEW.md  README.md  REDESIGN_optionB.md  RESIDUAL_SET_DRAIN_PLAN.md  RESID_ZERO_PHASE4.md  TOKEN_IMPROVEMENTS.md  WAVETABLE_CODEBOOK_DESIGN.md  WORK_ORDER_event_boundary_dictionary.md  WORK_ORDER_prior_state_recanon.md  WORK_ORDER_v3_hardening.md  agents.md  build.sh  build_sample.py  freq_collapse_probe.py  freq_residual_instrument_spike.py  mdl_codec.py  mdl_parse.py  pyproject.toml  pyrightconfig.json  resid_precise.py  residual_mechanism.py  run_tests.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
design/: freq_onset_channel.md  freq_trajectory_anchoring.md  freq_v0_interval.md  instrument_program_pass_impl.md  melody_merge_split.md  whole_chip_zero_status.md
preframr_tokens/: __init__.py  alphabet_projection.py  audit_primitives.py  blocks.py  bpe_audit.py  coarsen_pass.py  constrained_decode.py  corpus.py  dump_meta.py  encoding_complexity.py  engine_fingerprint.py  melody_audit.py  motif_mine.py  palette_io.py  parse_audit.py  parse_runner.py  pipeline_trace.py  reg_mappers.py  reg_match.py  reglog_helpers.py  reglogparser.py  regtokenizer.py  render_play.py  role_lane.py  sid_frame_diff.py  stfconstants.py  tier_classify.py  token_weighting.py  tokenizer_config.py  tokenizer_profile.py  train_worker.py  trajectory_coverage.py  utils.py  vocab_signature.py
preframr_tokens/bacc/: __init__.py  _lz_njit.py  dmc_format.py  dmc_serialize.py  flat_serialize.py  generic_serialize.py  gt_common.py  gt_serialize.py  illegal_mpu.py  lft_serialize.py  pitch.py  primitive.py  recover.py  serialize.py  sidemu.py  tracker_ir.py  tracker_serialize.py
preframr_tokens/bacc/backends/: __init__.py  base.py  dmc.py  goattracker.py  gt_unpack.py  hubbard.py  lft.py
preframr_tokens/codec/: __init__.py  freq_instrument.py  freq_relative.py  lane_grammar.py  lsp_validate.py  pitch_universal.py  pitch_universal_anchor.py  pitch_universal_encode.py  program_encode.py  serialize_events.py  serialize_tokens.py  sidtrace_dump.py  step_codec.py  step_tracker.py  unified2_codec.py
preframr_tokens/events/: STATUS.md  __init__.py  constrained.py  dataset.py  decoder.py  encoder.py  factored.py  generate.py  gestures.py  inline.py  instrument.py  measure.py  oracle.py  pipeline.py  schema.py  seqref.py  stream.py  tokenize.py  varint.py
preframr_tokens/macros/: __init__.py  arbiter.py  blocks.py  codebook.py  codebook_emit.py  ctrl_osc_pass.py  ctrl_triple_pass.py  ctrl_update_pass.py  ctrl_wavetable_pass.py  decode.py  decoders.py  default_pipeline.py  envelope.py  flag_registry.py  freq_lut.py  freq_nudge_pass.py  freq_onset_pass.py  freq_run_pass.py  freq_trajectory_pass.py  gate_slope_shift_pass.py  generator_fit.py  generator_pass.py  global_osc_pass.py  gradient_pass.py  init_pass.py  instrument_program_pass.py  local_macros.py  lonely_validator.py  loop_pass.py  loops.py  macro_contracts.py  mdl_core.py  mdl_gesture_pass.py  melody_segment.py  motif_pass.py  note_off_pass.py  op_contracts.py  oscillate_env_pass.py  passes.py  passes_base.py  (+33 more)
tests/: _dump_fixture.py  conftest.py  parse_probes.py  sid_fixtures.py  test_alphabet_projection.py  test_amib_generic_budget.py  test_arbiter.py  test_audit_primitives.py  test_bacc.py  test_block_refire_contract.py  test_blocks.py  test_blocks_helpers.py  test_bpe_audit.py  test_coarsen_pass.py  test_codebook_consistency.py  test_codebook_id_alphabet.py  test_codebook_machine_equivalence.py  test_codebook_mask.py  test_codebook_registry.py  test_codec_gate_checks.py  test_codec_lanes.py  test_codec_surfaces.py  test_combine_reg.py  test_constrained_decode.py  test_constrained_decode_golden.py  test_corpus.py  test_corpus_budget.py  test_ctrl_osc_pass.py  test_ctrl_wavetable_pass.py  test_dictionary_segmentation.py  test_digi_detection.py  test_discover_njit.py  test_distill.py  test_dmc.py  test_driver_coverage.py  test_dump_meta.py  test_encoding_complexity.py  test_engine_fingerprint.py  test_events_acceptance.py  test_events_constrained.py  (+111 more)
tests/fixtures/: codebook_machine_golden.json  constrained_decode_golden.json  grid_runner_26s.dump.parquet  grid_runner_head.dump.parquet
tests/macros/: test_blocks.py  test_ctrl_triple_pass.py  test_ctrl_update_pass.py  test_envelope.py  test_freq_nudge_pass.py  test_freq_onset_pass.py  test_freq_passes_in_blocks.py  test_freq_run_pass.py  test_freq_trajectory_pass.py  test_freq_v0_interval.py  test_gate_slope_shift_pass.py  test_global_osc_pass.py  test_local_macros.py  test_lonely_validator.py  test_macros.py  test_multi_row_macro_registry.py  test_oscillate_env_pass.py  test_passes_base.py  test_pipeline_check.py  test_preset_in_passes.py  test_preset_pass.py  test_raw_vibrato_pass.py  test_release_update_pass.py  test_roles.py  test_set_to_diff.py  test_slope_pass.py  test_superframe.py  test_trajectory_anchor.py  test_transform_registry.py  test_transform_round_trip.py  test_validators_coverage.py  test_voice_agnostic.py  test_voice_block_order_pass.py  test_voice_track_pass.py  test_voice_trajectory.py  test_voice_trajectory_distributed.py
tests/test_fixtures/: 5_Title_Tunes.2.dump.parquet  A_Mind_Is_Born.1.dump.parquet  A_Mind_Is_Born.generic_state.npz  Catalyst.1.dump.parquet  Dum-dee-dum.1.dump.parquet  FamiCommodore.1.dump.parquet  Grid_Runner.1.dump.parquet  Hammurabi.1.dump.parquet  Jetta.1.dump.parquet  Monty_on_the_Run.1.dump.parquet  Need_More_NOPs.1.dump.parquet  Not_Even_Human.1.dump.parquet  Ode_to_Music.1.dump.parquet  Times_of_Lore.1.dump.parquet  Truck-On.1.dump.parquet  Twilight.1.dump.parquet  VIC64Demo_tune_5.1.dump.parquet
tools/: bulk_equiv.py  codec_gate.py  parse_equiv.py
(+55 files in other folders)
