[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "preframr-tokens"
description = "SID reglog parsing, tokenization, and macro transforms extracted from the preframr research codebase."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Anarkiwi"}]
keywords = ["sid", "c64", "preframr", "tokenizer", "reglog"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2",
    "pyarrow>=14",
    "tokenizers>=0.20",
    "tqdm>=4.65",
    "zstandard>=0.22",
    "numba>=0.59",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "coverage>=7",
    "pylint>=3",
    "pyright>=1.1",
    "pytest>=7",
    "pytest-cov>=4",
]
audio = [
    "preframr-audio>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/anarkiwi/preframr-tokens"
Source = "https://github.com/anarkiwi/preframr-tokens"
Issues = "https://github.com/anarkiwi/preframr-tokens/issues"

[tool.setuptools]
packages = ["preframr_tokens", "preframr_tokens.macros"]

[tool.setuptools.package-data]
preframr_tokens = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "0.20.0"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
branch = true
source = ["preframr_tokens"]
omit = [
    "preframr_tokens/__init__.py",
    "preframr_tokens/macros/__init__.py",
    "preframr_tokens/blocks.py",
    "preframr_tokens/corpus.py",
    "preframr_tokens/parse_runner.py",
    "preframr_tokens/tokenizer_profile.py",
    "preframr_tokens/trajectory_coverage.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@njit",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pylint.main]
disable = "all"
enable = [
    "redefined-builtin",
    "cell-var-from-loop",
    "unbalanced-tuple-unpacking",
    "stop-iteration-return",
    "dangerous-default-value",
    "pointless-statement",
    "using-constant-test",
    "raise-missing-from",
]
